--- a/layout/services.html
+++ b/layout/services.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221215144505">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221230093511">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221230093511">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221230093511">
 
 
 </head>
@@ -168,7 +168,9 @@
 								Категория
 							</div>
 							<button class="products__menu-btn spoller-caption" data-spoller>
-								Трансформаторы тока
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit voluptas voluptatem
+								exercitationem quo ipsum totam suscipit explicabo, hic non quod at nulla recusandae
+								nihil dolorem aliquam odio maxime quasi ipsam.
 							</button>
 							<div class="products__menu-content products-menu">
 								<a href="" class="products-menu__item">
@@ -487,6 +489,45 @@
 							</div>
 						</div>
 					</div>
+					<div class="products__article article__content">
+						<p>Локализация производства и использование российского сырья и комплектующих позволяет
+							соблюдать требования ГОСТ и отраслевые стандарты на всех стадиях производства:</p>
+
+						<ul>
+							<li>Входной контроль сырья, материалов и комплектующих;</li>
+							<li>Литье полиамидов и пластиката под давлением;</li>
+							<li>Штамповка и металлообработка;</li>
+							<li>Сборка изделий;</li>
+							<li>Приёмо-сдаточные испытания в собственной лаборатории;</li>
+							<li>Упаковка.</li>
+						</ul>
+
+						<p>Высокотехнологичное оборудование Arburg и Milacron позволяет достигать высокого качества
+							продукции. Литьевые машины горизонтального и вертикального исполнения позволяют отливать
+							изделия в различных исполнениях.&nbsp;<br>
+							Современный парк металлообрабатывающих станков<br>
+							и прессов позволяют получать высокую точность при<br>
+							изготовлении изделий</p>
+
+						<p>Особое внимание к минимизации ошибок и обеспечению высокого качества выпускаемой продукции:
+						</p>
+
+						<ul>
+							<li>Отдельный участок для сборки готовой продукции;</li>
+							<li>Систематизация процесса;</li>
+							<li>Применение принципа конвейерной ручной сборки;</li>
+							<li>Строгий контроль инженера по качеству.</li>
+						</ul>
+
+						<p>После сборки, продукция проходит приемо-сдаточные испытания в собственной лаборатории, где
+							проверяется ее соответствие требованиям &nbsp;отраслевых стандартов, ГОСТ и ТУ:</p>
+
+						<ul>
+							<li>Собственная сертифицированная лаборатория;</li>
+							<li>Регулярная поверка инструментов и оборудования;</li>
+							<li>Обязательные испытания изделий из каждой партии выпускаемой продукции.</li>
+						</ul>
+					</div>
 					<div class="products__offers" data-animation>
 						<h2 class="products__offers-title title-xxl">
 							Другие предложения
@@ -687,16 +728,16 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221215144505"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221230093511"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221230093511"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221215144505"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221215144505"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221215144505"></script>
-<script src="js/app.min.js?_v=20221215144505"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221230093511"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221230093511"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221230093511"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221230093511"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221230093511"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221230093511"></script>
+<script src="js/app.min.js?_v=20221230093511"></script>
 
 </body>
 
