--- a/src/site/templates/production/production.htm
+++ b/src/site/templates/production/production.htm
@@ -72,6 +72,6 @@
                         </div>
                     </div>
 
-                    <div class="article__content">{{DESCRIPTION}}</div>
+                    <div class="products__article article__content">{{DESCRIPTION}}</div>
                 </div>
             </div>
