--- a/src/site/templates/production/production_direction.htm
+++ b/src/site/templates/production/production_direction.htm
@@ -73,7 +73,7 @@
                         </div>
                     </div>
 
-                    <div class="article__content">{{TEXTFULL}}</div>
+                    <div class="products__article article__content">{{TEXTFULL}}</div>
 
                     <div class="products__offers">
                         <h2 class="products__offers-title title-xxl">
