--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1511,7 +1511,21 @@ body._pc .anim-content .products.active .products__item {
   position: relative;
   padding: 4em 0em 0em 0em;
   color: #fff;
+}
+
+.main.isLoaded::after {
+  display: none;
+}
+
+.main::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: #31147b;
+  z-index: -1;
 }
 
 .main + * {
@@ -1985,6 +1999,7 @@ body._pc .anim-content .products.active .products__item {
 
 .team.team-offset {
   padding: 1.875em 0em 5em;
+  margin: -9.375em 0em 0em 0em;
 }
 
 .team__header {
@@ -2435,6 +2450,26 @@ body._pc .anim-content .products.active .products__item {
   font-size: 36px;
 }
 
+.article__content.products__article {
+  margin: 6.25em 0em 0em 0em;
+}
+
+.article__content.products__article p,
+.article__content.products__article li {
+  color: #000;
+}
+
+.article__content.products__article li::before {
+  top: 8px;
+  -webkit-transform: none;
+      -ms-transform: none;
+          transform: none;
+}
+
+.article__content.products__article > *:not(:last-child) {
+  margin: 0em 0em 1.875rem 0rem;
+}
+
 .article__content.about__privacy strong {
   font-size: 18px;
   font-weight: 700;
@@ -2500,10 +2535,6 @@ body._pc .anim-content .products.active .products__item {
   font-weight: 500;
   line-height: 1.3888888889;
   color: #7b7e89;
-}
-
-.article__content > p:not(:last-child) {
-  margin: 0em 0em 1.3333333333em 0rem;
 }
 
 .article__content > p mark {
