upd lava animation

--- a/src/site/templates/articles/articles.htm
+++ b/src/site/templates/articles/articles.htm
@@ -1,4 +1,4 @@
-<section id="lottie" class="page__main main">
+<section class="page__main main">
                 <div class="main__container">
                     <div class="main__body main__body-md">
                         {{BREADCRUMBS}}
@@ -6,8 +6,8 @@
                             {{HEADING}}
                         </h1>
                     </div>
-                    <canvas id="gradient-canvas" data-transition-in></canvas>
                 </div>
+                <canvas id="gradient-canvas" data-transition-in></canvas>
             </section>
             <div class="page__news news news-offset">
                 <div class="news__container">
