--- a/src/site/templates/articles/articles__detail.htm
+++ b/src/site/templates/articles/articles__detail.htm
@@ -1,4 +1,4 @@
-<div id="lottie" class="page__main main">
+<div class="page__main main">
                 <div class="main__container">
                     <div class="main__body main__body-md">
                         {{BREADCRUMBS}}
