--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -10,7 +10,7 @@
                         </a>
                     </div>
                 </div>
-                <canvas id="gradient-canvas" data-transition-in />
+                <canvas id="gradient-canvas" data-transition-in></canvas>
             </section>
             {{DIRECTIONS}}
             {{SLIDER}}
