--- a/src/site/templates/company/company.htm
+++ b/src/site/templates/company/company.htm
@@ -1,4 +1,4 @@
-<section id="lottie" class="page__main main">
+<section class="page__main main">
                 <div class="main__container">
                     <div class="main__body main__body-md">
                         {{BREADCRUMBS}}
@@ -7,7 +7,7 @@
                         </h1>
                     </div>
                 </div>
-                <canvas id="gradient-canvas" data-transition-in>
+                <canvas id="gradient-canvas" data-transition-in></canvas>
             </section>
             <section class="page__about about">
                 <div class="about__container">
