--- a/src/site/templates/contacts/contacts.htm
+++ b/src/site/templates/contacts/contacts.htm
@@ -1,4 +1,4 @@
-<section id="lottie" class="page__main main">
+<section class="page__main main">
                 <div class="main__container">
                     <div class="main__body main__body-md">
                         {{BREADCRUMBS}}
@@ -7,8 +7,8 @@
                             {{TITLE}}
                         </h1>
                     </div>
-                    <canvas id="gradient-canvas" data-transition-in></canvas>
                 </div>
+                <canvas id="gradient-canvas" data-transition-in></canvas>
             </section>
             <div class="page__contacts contacts">
                 <div class="contacts__container">
