--- a/src/site/templates/production/production.htm
+++ b/src/site/templates/production/production.htm
@@ -1,4 +1,4 @@
-<section id="lottie" class="page__main main">
+<section class="page__main main">
                 <div class="main__container">
                     <div class="main__body main__body-md">
                         {{BREADCRUMBS}}
