upd meta verification tag

--- a/src/site/templates/layout/layout.htm
+++ b/src/site/templates/layout/layout.htm
@@ -47,7 +47,7 @@
 	<link rel="stylesheet" href="/css/reset.min.css{{VERSION}}">
 	<link rel="stylesheet" href="/css/style.min.css{{VERSION}}">
 
-
+	{{SETTINGS:META_VERIFICATION}}
 </head>
 
 <body>
